# IAENERO2026

./: README.md
ActividadesPorTema/: IE_InteligenciaArtificial_VAAL_Tema1.txt  IE_InteligenciaArtificial_VAAL_Tema1.txt.yaml  IE_InteligenciaArtificial_VAAL_Tema2.txt  IE_InteligenciaArtificial_VAAL_Tema2.txt.yaml  IE_InteligenciaArtificial_VAAL_Tema3.txt  IE_InteligenciaArtificial_VAAL_Tema3.txt.yaml  IE_InteligenciaArtificial_VAAL_Tema4.txt  IE_InteligenciaArtificial_VAAL_Tema4.txt.yaml
Equipos/: Amarillo.yaml  Azul.yaml  Añil.yaml  Cerceta.yaml  Equipo.yaml  Ladrillo.yaml  Lima.yaml  Naranja.yaml
Tema1/Amarillo/A2/: anlex.py  arg.py  codigo_boome  mqv.py
Tema1/Amarillo/A3/: Referencias.txt
Tema1/Azul/boome/: BoomeInterprete.py  anlex.py  code2.boome  vm.py
Tema1/Azul/podcast/: podcast.txt
Tema1/Añil/: R001_R002_Podcast_Enlace_Añil.txt  R003_Intérprete_del_Agente_Inteligente_Boome_Añil.txt
Tema1/Añil/R003_Intérprete_del_Agente_Inteligente_Boome_Añil/: BoomeInterprete.py  anlex.py  codigo.boome  vm.py
Tema1/Cerceta/: R001_URLPodcast.txt
Tema1/Cerceta/Boome/: BoomeInterprete.py  anlex.py  vm.py
Tema1/Ladrillo/Boome/: anlex.py  main.py  programa.boome  test.boome  vm.py
Tema1/Ladrillo/Podcast/: LINK PODCAST EQUIPO LADRILLO .txt
Tema1/Lima/: Activdad 1 Podcast.txt  Actividad 3 Linea del tiempo.txt
Tema1/Lima/Actividad 2 Inteprete Boome/: BoomeInterprete.py  andlex.py  vm.py
Tema1/Naranja/: IA-LineaTiempoNaranja.txt  Podcast IA - Visión de la Inteligencia (Enlace a Youtube).txt
Tema1/Naranja/Boome/: BoomeInterprete.py  anlex.py  codigo.boome  vm.py
Tema1/Oro/Boome/: BoomeInterprete.py  anlex.py  prueba.boome  vm.py
Tema1/Oro/Podcast/: transcripcion.txt
Tema1/Rojo/R002/: anlex.py  boomeInterprete.py  vm.py
Tema1/Verde/Actividad1/: referencias-link_podcast.txt
Tema1/Verde/Actividad2/: anlex.py  codigo.boome  interprete.py  vm.py
Tema2/Amarillo/Boom_Bay/: bayes.py  pyproject.toml  robot.py
Tema2/Amarillo/Boom_Bay/datos/: tablero.yaml
Tema2/Amarillo/Fig/: adivina_figura.py  pyproject.toml
Tema2/Amarillo/Fig/datos/: figuras.json
Tema2/Amarillo/RSTeoriaInfo/: adivinar.py  entrenador.py  inicializador.py  pyproject.toml
Tema2/Amarillo/RSTeoriaInfo/datos/: conocimiento.yaml  pesos_ordenados.yaml
Tema2/Amarillo/Spam/: clasificador.py  detokenizador.py  entrenador.py  evaluador.py  pyproject.toml
Tema2/Amarillo/Spam/datos/: mensajes_clasificados.yaml  mensajes_entrada.yaml  mensajes_etiquetados.yaml  mensajes_nuevos.yaml  metricas.yaml  tabla_probs.yaml
Tema2/Azul/Boom_Bay/: pyproject.toml  tablero.yaml
Tema2/Azul/Boom_Bay/boom_bay/: main.py
Tema2/Azul/Class_Prob/: pyproject.toml
Tema2/Azul/Class_Prob/class_prob/: __init__.py  clasificador.py  detokenizador.py  entrenador.py  evaluador.py
Tema2/Azul/Class_Prob/data/: mensajes_clasificados.yml  mensajes_entrada.yml  mensajes_etiquetados.yml  mensajes_nuevos.yml  metricas.yml  tabla_probabilidades.yml
Tema2/Azul/RM_Graph/: AdivinaFigura.py  figuras.json
Tema2/Azul/RSTeoriaInfo/: entrenador.py  inicializador.py  juego.py
Tema2/Añil/R0010-R0011 boome/: bayes.py  tablero.txt
Tema2/Añil/R001_R002_R003_RSTeoriaInfo_Añil/: animales.json  config.yaml  main.py  preguntas_ordenadas.json  tabla_animales_binaria.xlsx
Tema2/Añil/R004_R005_RM_Graph_Añil/: grafo.yaml  main_rm.py
Tema2/Añil/R006-R009 Class_Prob Añil/: clasificador.py  entrenador.py  evaluador.py  main.py
Tema2/Cerceta/Spam/: clasificador.json  clasificador.py  detokenizador.json  detokenizador.py  entrenador.json  entrenador.py  evaluador.json  evaluador.py  mensajes.toml  mensajes_nuevos.toml  pyproject.toml  utilitario.py
Tema2/Cerceta/adivinador animales/: adivinador.py  entrenador.py  inicializador.py  tabla.yaml
Tema2/Cerceta/boome/: boome.py  mapa.yaml
Tema2/Cerceta/figuras/: adivina_figuras.py  figuras.yaml
Tema2/Ladrillo/ANIMALES/: Entrenador.py  Inicializador.py  animales.yaml  main.py  tabla.yaml
Tema2/Ladrillo/BOOM_BAY/: boom_bay.py  tablero.yaml
Tema2/Ladrillo/FIGURAS/: Figura.py  figuras.yaml
Tema2/Ladrillo/SPAM/: clasificador.py  detokenizador.py  entrenador.py  entrenamiento.yml  evaluador.py  main.py  probabilidades.yml
Tema2/Lima/A1/: adivinador.py  adivinar_dataset.json  entrenador.py  inicializador.py
Tema2/Lima/A2/: grafo.json  programaFig.py
Tema2/Lima/A3/: calculos.py  clasificador.py  detokenizador.py  entrenador.py  mensajes.txt  mensajesNuevos.txt
Tema2/Lima/A4/: BoomeBayesiano.py  tablero.json
Tema2/Naranja/BoomBay/: BoomBay-BayesianoEdition.py  tablero.yaml
Tema2/Naranja/Class_Prob/: pyproject.toml
Tema2/Naranja/Class_Prob/src/: clasificador.py  clasificados.yaml  detokenizador.py  entrenador.py  entrenamiento.yaml  evaluacion.yaml  evaluador.py  ground_truth.yaml  msjforeval.txt  msjtraining.txt  probabilidades.yaml  rescomparador.yaml
Tema2/Naranja/Class_Prob/src/class_prob/: file_manager.py  text_processor.py
Tema2/Naranja/FigGeo/: pyproject.toml
Tema2/Naranja/RSTeoriaInfo/: pyproject.toml
Tema2/Naranja/RSTeoriaInfo/src/: adivinador.py  entrenador.py  inizializador.py  matriz_ordenada.json  ver1.json
Tema2/Oro/BoomBay/: BoomeBay.py  pyproject.toml  tablero.json
Tema2/Oro/Class_Prob/: base_mensajes.yaml  base_spam.txt  clasificador.py  detokenizador.py  entrenador.py  evaluador.py  mensajes_clasificados.yaml  nuevos_mensajes.txt  pyproject.toml  tokens.yaml
Tema2/Oro/figuras/: adivinador.py  figuras.json
Tema2/Oro/red-semantica-animales/: adivinador.py  animales.yaml  animales_entrenados.yaml  entrenador.py  inicializador.py  pyproject.toml
Tema2/Rojo/Boom_Bay/: anlex.py  boomeInterprete.py  map_loader.py  test_bayes.boomie  vm.py
Tema2/Rojo/Clasif_probCond/: clasificador.py  (+5 more)
Tema3/Ladrillo/: 4CABALLOS.py  4REINAS.py  CaballoTablero.py
Tema3/Naranja/: 4Caballos.py
Tema3/Naranja/HorseTour/: pyproject.toml
Tema3/Naranja/HorseTour/src/: HorseTour.py
Tema3/Naranja/NReinas/: pyproject.toml
Tema3/Naranja/NReinas/src/: NReinas.py
Tema3/Naranja/buscador_pp/: pyproject.toml
Tema3/Naranja/buscador_pp/src/: buscador_pp.py  grafo.yaml
(+120 files in other folders)
