[project]
name = "boom-bay"
version = "0.1.0"
description = "Agente de busqueda bayesiana de bombas en un tablero (Boome + Bayes)"
authors = [
    {name = "Equipo Amarillo"}
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
