[project]
name = "rs-teoria-info"
version = "0.1.0"
description = "Sistema experto tipo adivina-quien usando redes semanticas y teoria de la informacion"
authors = [
    {name = "Equipo Amarillo"}
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
