[project]
name = "class-prob"
version = "0.1.0"
description = "Clasificador de spam basado en probabilidad condicional y metodo de consenso"
authors = [
    {name = "Equipo Amarillo"}
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
