[project]
name = "boombay"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Mtz Hdez",email = "mtzhdaniel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
