[project]
name = "horsetour"
version = "0.1.0"
description = ""
authors = [
    {name = "SpectralMoon7w7",email = "jhurtado17@alumnos.uaq.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "horsetour", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
