[project]
name = "nreinas"
version = "0.1.0"
description = ""
authors = [
    {name = "SpectralMoon7w7",email = "jhurtado17@alumnos.uaq.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "nreinas", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
